[package]
name = "valence_block"
version.workspace = true
edition.workspace = true

[dependencies]
valence_core.workspace = true
anyhow.workspace = true
glam.workspace = true

[build-dependencies]
anyhow.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
valence_build_utils.workspace = true
valence_core.workspace = true
