[package]
name = "valence_boss_bar"
description = "Boss bar API for Valence"
readme = "README.md"
keywords = ["minecraft", "bossbar", "api"]
documentation.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
valence_core.workspace = true
valence_network.workspace = true
valence_entity.workspace = true
valence_client.workspace = true
uuid.workspace = true
bitfield-struct.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true