[package]
name = "valence_boss_bar"
description = "Boss bar API for Valence"
readme = "README.md"
keywords = ["minecraft", "bossbar", "api"]
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
valence_entity.workspace = true
valence_server.workspace = true
bitfield-struct.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
