[package]
name = "valence_build_utils"
description = "Common build script utilities for Valence"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
syn.workspace = true
proc-macro2.workspace = true
