[package]
name = "valence_chat"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
rsa.workspace = true
rustc-hash.workspace = true
sha1 = { workspace = true, features = ["oid"] }
sha2 = { workspace = true, features = ["oid"] }
tracing.workspace = true
valence_core.workspace = true
valence_client.workspace = true
valence_instance.workspace = true
valence_nbt.workspace = true
valence_player_list.workspace = true
valence_registry.workspace = true
uuid.workspace = true