[package]
name = "valence_chat"
version.workspace = true
edition.workspace = true

[features]
secure = ["dep:rsa", "dep:rustc-hash", "dep:sha1", "dep:sha2", "valence_client/secure_chat"]

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
rsa = { workspace = true, optional = true }
rustc-hash = { workspace = true, optional = true }
sha1 = { workspace = true, features = ["oid"], optional = true }
sha2 = { workspace = true, features = ["oid"], optional = true }
tracing.workspace = true
valence_core.workspace = true
valence_client = { workspace = true, features = ["chat"], optional = true }
valence_instance.workspace = true
valence_nbt.workspace = true
valence_player_list.workspace = true
valence_registry.workspace = true
uuid.workspace = true