[package]
name = "valence_chat"
version.workspace = true
edition.workspace = true

[features]
secure = ["dep:rsa", "dep:rustc-hash", "dep:sha1", "dep:sha2"]

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
rsa = { workspace = true, optional = true }
rustc-hash = { workspace = true, optional = true }
sha1 = { workspace = true, features = ["oid"], optional = true }
sha2 = { workspace = true, features = ["oid"], optional = true }
tracing.workspace = true
uuid.workspace = true
valence_lang.workspace = true
valence_nbt.workspace = true
valence_player_list.workspace = true
valence_protocol.workspace = true
valence_registry.workspace = true
valence_server.workspace = true
valence_server_common.workspace = true
valence_text.workspace = true
