[package]
name = "valence_client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_utils.workspace = true # Needed for `ScheduleLabel` derive macro.
bitfield-struct.workspace = true
bytes.workspace = true
glam.workspace = true
rand.workspace = true
tracing.workspace = true
uuid.workspace = true
byteorder.workspace = true
valence_biome.workspace = true
valence_core.workspace = true
valence_dimension.workspace = true
valence_entity.workspace = true
valence_layer.workspace = true
valence_nbt.workspace = true
valence_registry.workspace = true
