[package]
name = "valence_client"
version.workspace = true
edition.workspace = true

[features]
chat = []
secure_chat = ["chat"]

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bytes.workspace = true
glam.workspace = true
rand.workspace = true
tracing.workspace = true
uuid.workspace = true
valence_biome.workspace = true
valence_core.workspace = true
valence_dimension.workspace = true
valence_entity.workspace = true
valence_instance.workspace = true
valence_registry.workspace = true

