[package]
name = "valence_command"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
byteorder.workspace = true
ordered-float.workspace = true
petgraph.workspace = true
serde-value.workspace = true
thiserror.workspace = true
tracing.workspace = true
valence_server.workspace = true