[package]
name = "valence_core"
version.workspace = true
edition.workspace = true
build = "build/main.rs"

[features]
encryption = ["dep:aes", "dep:cfb8"]
compression =  ["dep:flate2"]

[dependencies]
aes = { workspace = true, optional = true }
anyhow.workspace = true
bevy_ecs.workspace = true
bitfield-struct.workspace = true
byteorder.workspace = true
bytes.workspace = true
cfb8 = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
glam = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["serde"] }
valence_nbt.workspace = true
valence_core_macros.workspace = true

[dev-dependencies]
rand.workspace = true
criterion.workspace = true
valence_core = { workspace = true, features = ["compression"] }

[build-dependencies]
anyhow.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
valence_macro_utils.workspace = true

[[bench]]
name = "benches"
harness = false
