[package]
name = "valence_equipment"
description = "Equipment syncing support for Valence"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = [
    "inventory"
]
inventory = ["dep:valence_inventory"]

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
derive_more.workspace = true
tracing.workspace = true
valence_server.workspace = true
valence_inventory = { workspace = true, optional = true }
